--- a/event handler/index.html
+++ b/event handler/index.html
@@ -8,21 +8,27 @@
     <title>Document</title>
   </head>
   <body>
-
     <div class="content" align="center" hidden>
       <button id="incrementButton">Click me</button>
       <h3>Kamu sudah menekan tombol sebanyak <span id="count">0</span></h3>
     </div>
-
   </body>
   <script>
-    function welcome(){
-        alert('adakadabra muncul element-elemen HTML');
+    function welcome() {
+      alert("adakadabra muncul element-elemen HTML");
 
-        // kita panggil classname content
-        const contents = document.querySelector('.content');
-        contents.removeAttribute('hidden');
+      // kita panggil classname content
+      const contents = document.querySelector(".content");
+      contents.removeAttribute("hidden");
     }
     document.body.onload = welcome();
+
+    // function handler button onclick
+    function increment() {
+      document.getElementById("count").innerText++;
+    }
+
+    // menambahkan event listener pada button
+    document.getElementById("incrementButton").onclick = increment;
   </script>
 </html>
