membangkitkan event handler custom dengan men-triger tombol dengan mengunakan dispantEvent

--- a/event handler/custom event/custom-event.html
+++ b/event handler/custom event/custom-event.html
@@ -22,8 +22,8 @@
   </head>
   <!-- body -->
   <body>
-    <div class="buttons">
-      <h3 class="caption">Silahkan tekan tombol salah satu dibawah!....</h3>
+    <div class="buttons" align="center">
+      <h3 id="caption">Silahkan tekan tombol salah satu dibawah!....</h3>
       <!-- button -->
       <button class="button" id="tombol">Tombol Event Custom</button>
     </div>
